Fix font-size on mobile

--- a/css/isthis.css
+++ b/css/isthis.css
@@ -221,7 +221,7 @@ footer p {
   }
 
   .about {
-    font-size: .7rem;
+    font-size: .75rem;
   }
 
   footer p {
